namcap (3.2.2)
    - rename elffiles rule to elfpaths
    - add elftextrel rule to detect text relocations (FS#26434)

namcap (3.2.1)
    - fix: glibfiles rules ineffective because of wrong schema
      filename pattern
    - fix: incorrect warning about permissions for symbolic links to
      static libraries (FS#26536)

namcap (3.2)
    - requires pacman 4 / pyalpm 0.5
    - fix: consider archive files as binaries in anyelf (FS#24854)
    - fix: refine glibfiles rules to avoid warnings in glib2 (FS#25829)

namcap (3.1.1)
	- fix: carch rule behavior
	- various code cleanups

namcap (3.1)
	- add checks for files in temp. folders in fhs rule (FS#23539)
	- add rule javafiles detecting Java class/jar files (FS#23521)
	- fix: parsepkgbuild executing arbitrary commands from PKGBUILD (FS#23902)
	- fix: extravars not knowing about $epoch (FS#23966)
	- fix: mimedesktop rule crashing on packages with symlinks (FS#23952)
	- fix: bug in script interpreter detection
	- uses pyalpm to access pacman database

namcap (3.0.6)
	- depends check now prints reasons why a dependency is needed
	- fix: inverted treatment of provides introduced by 3.0.5
	- test: basic unit test for sodepends rule
	- factored out tag formatting code

namcap (3.0.5)
	- fix: depends rule unreadable and broken (FS#23489)
	- added a warning when a rule needs a dependency declared optional

namcap (3.0.4)
	- run parsepkgbuild with a clean environment
	- added checkdepends to the list of legit PKGBUILD variables

namcap (3.0.3)
	- fix: extravars rule having unstable behaviour
	- fix: symlink rule not handling particular symlinks

namcap (3.0.2)
	- extravars rule: reduce the amount of false positives
	- fix crashes when running in non-English locales

namcap (3.0.1)
	- fix the ChecksumsRule behaviour with no source array (FS#23258)
	- correct old PacmanPackage interface usage (FS#23259, FS#23260)

namcap (3.0)
	- switch to Python 3
	- rework dependency analysis
	- add split package parsing capabilities